syntax = "proto3";

package blog;

option go_package = "github.com/alexandreps1123/grpc-go/blog/proto";

import "google/protobuf/empty.proto";

service BlogService {
    rpc CreateBlog (Blog) returns (BlogId);
    rpc ReadBlog (BlogId) returns (Blog);
    rpc UpdateBlog (Blog) returns (google.protobuf.Empty);
    rpc DeleteBlog (BlogId) returns (google.protobuf.Empty);
    rpc ListBlogs (google.protobuf.Empty) returns (stream Blog);
}

message Blog {
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}

message BlogId {
    string id = 1;
}
